fix scroll trigger class and added lower footer visibility

--- a/sass/main.css
+++ b/sass/main.css
@@ -51,6 +51,7 @@ body .hview {
 }
 .nav-top .nav-links .active {
   position: relative;
+  transition: 0.5s ease;
 }
 .nav-top .nav-links .active::after {
   position: absolute;
@@ -499,9 +500,9 @@ body .hview {
   width: 100%;
   margin: 0;
   background: #1A3B5A;
-  padding: 30px 0;
 }
 .footer .form-group {
+  padding-top: 30px;
   margin-bottom: 4rem;
 }
 .footer .form-group h5 {
@@ -544,9 +545,37 @@ body .hview {
 .footer .cbtn-form:hover {
   background: #ffb875;
 }
+.footer .lower-footer {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0;
+  margin-top: 5rem;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+.footer .lower-footer span a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 15px;
+  opacity: 0.1;
+}
+.footer .lower-footer img {
+  height: 20px;
+  width: 20px;
+  opacity: 0.1;
+  transition: 0.3s ease;
+}
+.footer .lower-footer img:hover {
+  opacity: 0.7;
+}
 
 p {
   font-size: 16px;
+}
+
+a {
+  text-decoration: none;
 }
 
 h5 {
