--- a/sass/src-sass/global.sass
+++ b/sass/src-sass/global.sass
@@ -48,6 +48,7 @@ body
 
         .active
             position: relative
+            transition: 0.5s ease
 
             &::after
                 position: absolute
@@ -511,9 +512,9 @@ body
     width: 100%
     margin: 0
     background: #1A3B5A
-    padding: 30px 0
 
     .form-group
+        padding-top: 30px
         margin-bottom: 4rem
 
         h5
@@ -559,3 +560,28 @@ body
 
         &:hover
             background: #ffb875
+
+    .lower-footer
+        width: 100%
+        display: flex
+        justify-content: space-between
+        align-items: center
+        padding: 20px 0
+        margin-top: 5rem
+        border-top: 1px solid rgba(255, 255, 255, 0.1)
+
+        span 
+            a 
+                text-decoration: none
+                color: #fff
+                font-size: 15px
+                opacity: 0.1
+
+        img 
+            height: 20px
+            width: 20px
+            opacity: 0.1
+            transition: 0.3s ease
+
+            &:hover
+                opacity: 0.7
