--- a/sass/src-sass/typography.sass
+++ b/sass/src-sass/typography.sass
@@ -4,6 +4,9 @@
 p 
     font-size: 16px
 
+a 
+    text-decoration: none
+
 h5 
     font-size: 35px
 
